tests/error/type_errors/while_not_bool.err
Error: Not truthy (at $FILE:7:10)
  | 
5 | @guppy
6 | def foo(x: NonBool) -> int:
7 |     while x:
  |           ^ Expression of type `NonBool` is not truthy

Help: Implement missing method: `__bool__: NonBool -> bool`

Guppy compilation failed due to 1 previous error
